--- a/courseapp/courses/templates/courses/index.html
+++ b/courseapp/courses/templates/courses/index.html
@@ -7,12 +7,15 @@
     <link rel="stylesheet" href="{% static 'courses/css/style.css' %}">
 {% endblock %}
 {% block content %}
-<div class="container mt-3s">
+<div class="container mt-3">
     <div class="row">
         <div class="col-3">
             <!-- Menu-->
             {% include 'courses/partials/_categories.html' %}
         <div class="col-9">
+            {% if courses|length == 0 %}
+                <div class="alert alert-warning"> Course Not Found</div>
+            {% endif %}
             {% for course in courses %}
                     {% include 'courses/partials/_course.html' %}
             {% endfor %}
